--- a/PJ.html
+++ b/PJ.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PJ- Elayne</title>
-    <link rel="icon" type="image/x-icon" href="fotos/favicon.png">
-    <link rel="stylesheet" href="estilos/menu.css">
-    <link rel="stylesheet" href="/estilos/imagem.css">
-    <link rel="stylesheet" href="/estilos/Cards.css">
-    <link rel="stylesheet" href="/estilos/texto.css">
+    <link rel="icon" type="image/x-icon" href="favicon.png">
+    <link rel="stylesheet" href="menu.css">
+    <link rel="stylesheet" href="imagem.css">
+    <link rel="stylesheet" href="Cards.css">
+    <link rel="stylesheet" href="texto.css">
 </head>
 <body>
     <div class="conteúdo">
@@ -24,7 +24,7 @@
          </div>
          <div class="flex">
          <div class="card">
-            <img src="/fotos/Pulseira amarela.jpeg" alt="">
+            <img src="Pulseira amarela.jpeg" alt="">
             <p>
                 É uma pulseira feita de miçangas na cor amarela.
             </p>
@@ -36,19 +36,19 @@
             </p>
          </div>
          <div class="card">
-            <img src="/fotos/Pulseiras coloridas.jpg" alt="">
+            <img src="Pulseiras coloridas.jpg" alt="">
             <p>
                 São pulseiras coloridas, feita de miçangas e com pedrinhas com a inicial do nome de alguém.
             </p>
          </div>
 a         <div class="card">
-            <img src="/fotos/Pulseira verde.jpg" alt="">
+            <img src="Pulseira verde.jpg" alt="">
             <p>
                 É uma pulseira feita de pedrinhas verdes e com a inicial de alguém.
             </p>
          </div>
          <div class="card">
-            <img src="/fotos/Pulseira rosa.jpg" alt="">
+            <img src="Pulseira rosa.jpg" alt="">
             <p>
                 Uma pulseira feita de miçangas na cor rosa e com carinhas.
             </p>
