--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elayne Garré Lima</title>
-    <link rel="icon" type="image/x-icon" href="fotos/favicon.png">
-    <link rel="stylesheet" href="estilos/menu.css">
-    <link rel="stylesheet" href="/estilos/Cards.css">
-    <link rel="stylesheet" href="/estilos/texto.css">
+    <link rel="icon" type="image/x-icon" href="favicon.png">
+    <link rel="stylesheet" href="menu.css">
+    <link rel="stylesheet" href="Cards.css">
+    <link rel="stylesheet" href="texto.css">
 </head>
 <body>
     <div class="conteudo">
@@ -20,9 +20,9 @@
          <br><div id="foto"></div>
          <div id="pessoal">
              <br><div id="nome"><h1>Elayne Garré Lima</h1></div>
-             <img src="/fotos/eu...jpg" alt="" width="20px">
+             <img src="eu...jpg" alt="" width="20px">
              <div id="dados">
-                <a href="https://wa.me/64996063983/?text='Olá! Gostei do seu currículo'" target="_blank" id="whatsApp"><img src="/fotos/whatsApp.png" alt="" width="10px"> 64 9 96063983</a> 64 9 96063983 <br>
+                <a href="https://wa.me/64996063983/?text='Olá! Gostei do seu currículo'" target="_blank" id="whatsApp"><img src="whatsApp.png" alt="" width="10px"> 64 9 96063983</a> 64 9 96063983 <br>
                  Instagram _elayneelima <br>
                  e-mail elaynelima713@gmail.com <br>
                  gitHub Elaynelima <br>
@@ -34,37 +34,37 @@
              <a href=""> 
              <div id="documentos"> 
                 Documentos
-                <img src="/fotos/Documentos.png" alt=""  width="20px">
+                <img src="Documentos.png" alt=""  width="20px">
             </div>
         </a>
              <a href="">
                 <div id="apresentacoes">
                     Apresentações
-                    <img src="/fotos/design-de-interface-do-usuario.png" alt=""  width="20px">
+                    <img src="design-de-interface-do-usuario.png" alt=""  width="20px">
                 </div>
                 </a>
                 <a href="">
              <div id="planilhas">
                 Planilhas
-                <img src="/fotos/10277819 (1).png" alt=""  width="20px">
+                <img src="10277819 (1).png" alt=""  width="20px">
             </div>
             </a>
             <a href="">
              <div id="HTML">
                 Códigos HTML
-                <img src="/fotos/html.png" alt=""  width="20px">
+                <img src="html.png" alt=""  width="20px">
             </div>
             </a>
             <a href="">
              <div id="CSS">
                 Códigos CSS
-                <img src="/fotos/css.png" alt=""  width="20px">
+                <img src="css.png" alt=""  width="20px">
             </div>
         </a>
         <a href="">
              <div id="JS">
                 Códigos Java Script
-                <img src="/fotos/JS.webp" alt="" width="20px">
+                <img src="JS.webp" alt="" width="20px">
             </div>
         </a>
          </div>
