--- a/Cursos.html
+++ b/Cursos.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cursos - Elayne</title>
-    <link rel="icon" type="image/x-icon" href="fotos/favicon.png">
-    <link rel="stylesheet" href="estilos/menu.css">
-    <link rel="stylesheet" href="/estilos/imagem.css">
-    <link rel="stylesheet" href="/estilos/Cards.css">
-    <link rel="stylesheet" href="/estilos/texto.css">
+    <link rel="icon" type="image/x-icon" href="favicon.png">
+    <link rel="stylesheet" href="menu.css">
+    <link rel="stylesheet" href="imagem.css">
+    <link rel="stylesheet" href="Cards.css">
+    <link rel="stylesheet" href="texto.css">
 </head>
 <body>
     <div id="conteudo">
