--- a/Habilidades.html
+++ b/Habilidades.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Habilidades - Elayne</title>
-    <link rel="icon" type="image/x-icon" href="fotos/favicon.png">
-    <link rel="stylesheet" href="/estilos/menu.css">
-    <link rel="stylesheet" href="/estilos/imagem.css">
-    <link rel="stylesheet" href="/estilos/Cards.css">
-    <link rel="stylesheet" href="/estilos/texto.css">
+    <link rel="icon" type="image/x-icon" href="favicon.png">
+    <link rel="stylesheet" href="menu.css">
+    <link rel="stylesheet" href="imagem.css">
+    <link rel="stylesheet" href="Cards.css">
+    <link rel="stylesheet" href="texto.css">
 </head>
 <body>
     <div id="conteudo"></div>
@@ -49,10 +49,10 @@
           </div>
           <h2>Filmes que gosto</h2>
          <div class="card">
-            <a class="card" href=""> Para todos garotos que já amei <img src="/fotos/imagem-1.webp" alt=""></a>
-            <a class="card" href=""> Quatro vidas de um cachorro <img src="/fotos/imagem-2.jpg" alt=""></a>
-            <a class="card" href=""> Meninas não choram <img src="/fotos/imagem-3.jpg" alt=""></a>
-            <a class="card" href=""> Milagres do Paraíso <img src="/fotos/imagem-4.webp" alt=""></a>
+            <a class="card" href=""> Para todos garotos que já amei <img src="imagem-1.webp" alt=""></a>
+            <a class="card" href=""> Quatro vidas de um cachorro <img src="imagem-2.jpg" alt=""></a>
+            <a class="card" href=""> Meninas não choram <img src="imagem-3.jpg" alt=""></a>
+            <a class="card" href=""> Milagres do Paraíso <img src="imagem-4.webp" alt=""></a>
 
          </div>
 
