--- a/PJ.html
+++ b/PJ.html
@@ -30,7 +30,7 @@
             </p>
          </div>
          <div class="card">
-            <img src="/Pulseira roxa.jpg" alt="">
+            <img src="Pulseira roxa.jpg" alt="">
             <p>
                 É uma pulseira roxa, feita de pedrinhas enfeite de florzinha.
             </p>
